--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Character encoding for proper text display -->
     <meta charset="UTF-8" />
+    <!-- Favicon for the browser tab -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Responsive viewport settings for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Page title displayed in browser tab -->
     <title>password-manager</title>
   </head>
   <body>
+    <!-- Root element where React app will be mounted -->
     <div id="root"></div>
+    <!-- External library for animated icons -->
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <!-- Main application entry point -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
